<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sessions_section"
            android:title="@string/schedule"
            android:icon="@drawable/ic_access_time_black_24dp"/>
        <item
            android:id="@+id/speakers_section"
            android:title="@string/speakers_title"
            android:icon="@drawable/ic_people_black_24dp"/>
        <item
            android:id="@+id/rooms_section"
            android:title="@string/rooms_title"
            android:icon="@drawable/ic_action_room"/>

        <!--<item-->
            <!--android:id="@+id/tags_section"-->
            <!--android:title="Tags"-->
            <!--android:icon="@drawable/ic_label_outline_black_24dp"/>-->

    </group>

</menu>